src/components/student_details_modal/styles.module.css
/* Certification Specific Styles */
.dataScience {
    color: rgb(171, 19, 104);
}

.machineLearning {
    color: #479e8a;
}

.buttonDataScience,
.buttonMachineLearning {
    color: white;
    display: inline-block;
    padding: 10px 20px;
    margin: 10px 10px;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    border: none;
    border-radius: 4px;
    transition: opacity 0.3s ease;
}

.buttonDataScience {
    background-color: rgb(171, 19, 104);
}

.buttonMachineLearning {
    background-color: #479e8a;
}

.buttonDataScience:hover,
.buttonMachineLearning:hover {
    opacity: 0.8; /* Make the button slightly transparent when hovered */
}

.closeButtonDataScience,
.closeButtonMachineLearning {
    font-size: 24px;
    border: none;
    background: none;
    cursor: pointer;
}

.closeButtonDataScience {
    color: rgb(171, 19, 104);
}

.closeButtonMachineLearning {
    color: #479e8a;
}

/* Modal Styles */
.modalOverlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(188, 188, 188, 0.5); /* Semi-transparent background */
    backdrop-filter: blur(10px); /* Blur effect */
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 20;
    opacity: 0; /* Start fully transparent */
    visibility: hidden; /* Start hidden */
    transition: opacity 0.3s ease, visibility 0.3s ease;
}

.modalActive {
    opacity: 1; /* Fully opaque */
    visibility: visible; /* Make visible */
}

.modalContent {
    background-color: #fff;
    padding: 2% 3%;
    color: #050505;
    border-radius: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    z-index: 21;
    width: 700px;
    height: auto;
    transform: scale(0.95); /* Start slightly scaled down */
    transition: transform 0.3s ease; /* Smooth scale transition */
}

.modalContentActive {
    transform: scale(1); /* Scale to normal size */
}

/* Close Button Styles */
.closeButton {
    position: absolute;
    top: 3%;
    right: 3%; /* Ensures the close button is always on the right side */
    border: none;
    background: none;
    font-size: 24px;
    cursor: pointer;
    z-index: 1002; /* Ensure it's above the modal content */
}

/* Profile Image Styles */
.profileImage {
    width: 100%;
    height: auto;
    aspect-ratio: 1;
    max-width: 100%;
    border-radius: 20px; /* Makes the image circular */
    object-fit: cover; /* Ensure the image covers the area without distortion */
    margin: 10px 0; /* Vertical margin for spacing */
    border: 3px solid; /* Border color will be set dynamically */
}

/* Profile Container Styles */
.profileContainer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.leftColumn,
.rightColumn {
    flex: 1; /* Both columns take up equal space */
    margin: 20px; /* Optional: adds some space around each column */
}

.leftColumn {
    max-width: 40%; /* Allow the left column to take more width */
}

.rightColumn {
    max-width: 60%; /* Adjust the right column to align with left column */
}

@media (max-width: 768px) {
    .modalOverlay {
        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
        z-index: 1000; /* Ensure it's above other content */
        opacity: 0;
        pointer-events: none;
        transition: opacity 0.3s ease;
    }

    .modalActive {
        opacity: 1;
        pointer-events: auto;
    }

    .modalContent {
        width: 85%;
        max-width: 500px;
        max-height: 90%;
        border-radius: 10px;
        overflow: hidden; /* Ensures border-radius is respected */
        display: flex;
        flex-direction: column;
        z-index: 100;
        opacity: 0;
        transform: translateY(-20px);
        transition: opacity 0.3s ease, transform 0.3s ease;
    }

    .modalContentActive {
        opacity: 1;
        padding: 3px;
        transform: translateY(0);
    }

    .profileContainer {
        flex-direction: column;
        justify-content: flex-start;
        height: 100%;
        overflow-y: auto; /* Makes the content scrollable */
        padding: 0;
        box-sizing: border-box;
    }

    .profileImage {
        width: 80%; /* Image takes full width of the container */
        max-height: 300px; /* Optional: limit the height of the image */
        border-radius: 10px; /* Optional: rounded corners */
        margin-top: 50px;
        margin-bottom: 20px; /* Space below the image */
    }

    .leftColumn {
        width: 100%; /* Ensure full width in the column layout */
        text-align: center;
        max-width: initial;
        margin: 0; /* Remove any default margin */
        padding: 0; /* Remove any default padding */
    }

    .leftColumn p {
        padding: 5%;
        text-align: left;
    }

    .rightColumn {
        width: 100%; /* Ensure full width in the column layout */
        text-align: left;
        padding: 0 5%; /* Apply padding to keep content inside the card */
        max-width: initial;
        box-sizing: border-box; /* Ensure padding is included in width calculations */
    }

    .rightColumn h1 {
        margin-top: initial; /* Remove default margin */
        font-size: 24px;
    }

    .rightColumn p {
        margin: initial; /* Add some margin between paragraphs */
    }

    .rightColumn a {
        display: inline-block;
        margin-top: 20px;
        color: #fff; /* Adjust link color */
        text-decoration: none;
    }

    .rightColumn a:hover {
        text-decoration: initial;
    }
}

